Migrate project language from Java to Kotlin, JVM 25 baseline unchanged
Deletes the Java implementation (all twelve use cases, app/src/main/java
and app/src/test/java) and stands up a Kotlin build in its place, per
ADR 0009. The SDD framework itself — documentation/, .claude/, rest/ — is
untouched; only the language and the docs that described it change.

- adr/0009-kotlin-migration.adr.md: records the decision. Kotlin 2.4.10 via
  org.jetbrains.kotlin.jvm + kotlin.plugin.spring (all-open), jOOQ codegen
  stays Java, ktlint via Spotless replaces the Java-era hygiene-only block,
  no Lombok. JVM target stays 25 (verified Kotlin 2.4.10 supports JVM_25
  rather than stepping back to 21 as a false safety margin).
- technical.spec.md, coding-style.definition.md (full Kotlin rewrite —
  data classes, sealed hierarchies, null-safety replacing the
  Optional-vs-nullable-record split), architecture.definition.md,
  execution.playbook.md: updated for the new baseline.
- gradle/libs.versions.toml, app/build.gradle.kts: Kotlin JVM/Spring
  plugins, jvmToolchain 25, jackson-module-kotlin, ktlint.
- app/src/main/kotlin/.../bootstrap/AlpineBookingApplication.kt: minimal
  Spring Boot entrypoint — the only production source in the tree.
- plan.md, tasks.md: reset to a not-started scoreboard for the twelve use
  cases; Java-era history stays in git.
- .sdkmanrc, .idea/misc.xml, .claude/settings.json: environment/tooling
  follow-ups.

Verified, not assumed: ./gradlew clean build green, app boots for real
(Flyway migrations run, Tomcat starts), compiled bytecode confirmed major
version 69 (JVM 25) via a foojay-provisioned Temurin 25 toolchain.

Re-implementation of the twelve use cases is deferred to later /loop-uc
runs, one at a time, from the unchanged specs in documentation/use-cases/.